<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ivolabs.android.ivo.SignupActivityFragment">

    <EditText
        android:id="@+id/new_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_username_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/bgBlue"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/bgBlue"
        android:layout_below="@+id/new_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <EditText
        android:id="@+id/new_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint_2"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/bgBlue"
        android:layout_below="@+id/new_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/register_new_user"
        android:layout_width="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:background="@color/bgBlue"
        android:textColor="@color/txWhite"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/register"
        android:layout_below="@+id/new_password_confirmation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

</RelativeLayout>
