<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ivolabs.android.ivo.LoginActivityFragment">

    <EditText
        android:id="@+id/username_for_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_username_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/bgBlue"
        android:layout_marginTop="52dp" />

    <EditText
        android:id="@+id/password_for_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/username_for_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/bgBlue"
        android:layout_marginTop="28dp" />


    <Button
        android:id="@+id/login_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:background="@color/bgBlue"
        android:textColor="@color/txWhite"
        android:text="@string/login"
        android:layout_marginTop="81dp"
        android:layout_below="@+id/password_for_login"
        android:fontFamily="sans-serif-thin"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
